--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,10 @@
 <head>
     {% block meta %}
     <meta charset="UTF-8" />
+    <meta name="description" content="Website of harpsichordist Guillermo Brachetta." />
+    <meta name="author" content="Guillermo Brachetta" />
+    <meta name="keywords" content="Brachetta, music, harpsichord, baroque, art, concert, shop, recording" />
+    <meta name="application-name" content="Guillermo Brachetta" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     {% endblock meta %}
