--- a/album/templates/album/custom_widget_templates/custom_clearable_file_input.html
+++ b/album/templates/album/custom_widget_templates/custom_clearable_file_input.html
@@ -1,7 +1,7 @@
 {% if widget.is_initial %}
 <p>{{ widget.initial_text }}:</p>
 <a href="{{ widget.value.url }}">
-    <img src="{{ widget.value.url }}" class="rounded shadow-sm" width="96" height="96">
+    <img src="{{ widget.value.url }}" class="rounded shadow-sm" width="96" height="96" alt="thumbnail">
 </a>
 <br>
 {{ widget.input_text }}
