Added noopener to footer links

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -30,10 +30,10 @@
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <ul class="social-icons">
-                    <li><a class="github" href="https://github.com/GBrachetta" target="_blank"><i class="fa fa-github"></i></a></li>
-                    <li><a class="twitter" href="https://twitter.com/GBrachetta" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                    <li><a class="instagram" href="https://www.instagram.com/brachetta/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                    <li><a class="linkedin" href="https://www.linkedin.com/in/guillermo-brachetta-027764174" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a class="github" href="https://github.com/GBrachetta" target="_blank" rel="noopener"><i class="fa fa-github"></i></a></li>
+                    <li><a class="twitter" href="https://twitter.com/GBrachetta" target="_blank" rel="noopener"><i class="fa fa-twitter"></i></a></li>
+                    <li><a class="instagram" href="https://www.instagram.com/brachetta/" target="_blank" rel="noopener"><i class="fa fa-instagram"></i></a></li>
+                    <li><a class="linkedin" href="https://www.linkedin.com/in/guillermo-brachetta-027764174" target="_blank" rel="noopener"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
             </div>
         </div>
