--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -13,7 +13,7 @@
         </div>
     </section>
 
-    <section class="row justify-content-center align-items-start">
+    <section class="row justify-content-center align-items-start parent-container">
         <div class="overlay-home col second-overlay"></div>
         <div class="bg2 bg col" data-parallax="scroll" data-speed="0.5"></div>
         <div class="col-10 col-md-8 container-content">
@@ -31,17 +31,17 @@
         </div>
     </section>
 
-    <section class="row justify-content-center align-items-start">
+    <section class="row justify-content-center align-items-start parent-container">
         <div class="overlay-home col third-overlay"></div>
         <div class="bg3 bg col" data-parallax="scroll" data-speed="0.5"></div>
         <div class="col-10 col-md-8 container-content">
             <p id="third-section-content" class="content-home">
-                I love being a musician.<br> I could have my dream day playing basso continuo and chamber music with friends and colleagues, to feel privileged whilst playing with them.<br> I have a strong connection with the music of Wilhelm Friedemann Bach and will not rest until I’ve done everything possible to make it better understood.<br> I cannot hold a conversation or read a book if there’s good music playing, but I can cry.<br> I find being onstage irresistible. Thanks to the music I travel and meet fascinating people.<br> I’m extremely fortunate.
+                I love being a musician.<br> I could have my dream day playing basso continuo and chamber music with friends and colleagues.<br> I have a strong connection with the music of Wilhelm Friedemann Bach and wished it was better understood.<br> I cannot hold a conversation or read a book if there’s good music playing (but I can cry).<br> I find being onstage irresistible. Thanks to the music I travel and meet fascinating people.<br> I’m extremely fortunate.
             </p>
         </div>
     </section>
 
-    <section class="row justify-content-center align-items-start">
+    <section class="row justify-content-center align-items-start parent-container">
         <div class="overlay-home col fourth-overlay"></div>
         <div class="bg4 bg col" data-parallax="scroll" data-speed="0.5"></div>
         <div class="col-10 col-md-8 container-content">
