--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="mb-0 col-12 col-md-6 text-left">
                 <h6>About</h6>
-                <p class="text-justify">This website has been created for educational purposes. The author is responsible for any involuntary infringement of copyrights.</p>
+                <p>This website has been created for educational purposes. Solely the author is responsible for any involuntary infringement of copyrights.</p>
             </div>
             <div class="col-12 col-md-6 text-left text-md-right mb-0">
                 <h6>Contact</h6>
