--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container-fluid">
-    <section class="row justify-content-start align-items-start">
+    <section class="row justify-content-start align-items-start parent-container">
         <div class="overlay-home col first-overlay"></div>
         <div class="bg1 bg col" data-parallax="scroll" data-speed="0.5"></div>
         <div id="first-section-content" class="col-8 ml-lg-5 titles-home">
