--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -5,11 +5,11 @@
     <div class="container">
         <div class="row">
             <div class="mb-0 col-12 col-md-6 text-left">
-                <h6>About</h6>
+                <h6 class="titles-footer">About</h6>
                 <p>This website has been created for educational purposes. Solely the author is responsible for any involuntary infringement of copyrights.</p>
             </div>
             <div class="col-12 col-md-6 text-left text-md-right mb-0">
-                <h6>Contact</h6>
+                <h6 class="titles-footer">Contact</h6>
                 <ul class="footer-links">
                     <li><i class="fas fa-home mr-3"></i>Waddenweg 149,</li>
                     <li>2134XL, Hoofddorp, NL</li>
