--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -3,7 +3,7 @@
 
     <a class="pr-3" href="{% url 'home' %}">
         <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="72" height="72" viewBox="0 0 560.130321 506.623658" preserveAspectRatio="xMidYMid meet">
-            <g transform="translate(-4.869679,509.981954) scale(0.100000,-0.100000)" fill="#cc1414" stroke="none">
+            <g class="logo" transform="translate(-4.869679,509.981954) scale(0.100000,-0.100000)" stroke="none">
                 <path d="M5395 5072 c-225 -124 -706 -549 -1180 -1043 -640 -666 -957 -917
             -1480 -1176 -265 -131 -364 -171 -376 -152 -26 39 31 179 182 454 276 501 335
             609 427 792 53 105 93 195 90 199 -4 4 -47 -2 -95 -12 -63 -13 -131 -38 -241
