Corrected unimportant lighthouse warnings referring to noopener in a tags

--- a/events/templates/includes/delete_event_modal_sm.html
+++ b/events/templates/includes/delete_event_modal_sm.html
@@ -1,9 +1,9 @@
 <!-- Delete Modal -->
-<div class="modal fade" id="deleteEventModalSm{{ forloop.counter }}" tabindex="-1" role="dialog" aria-labelledby="deleteEventModalLabel" aria-hidden="true">
+<div class="modal fade" id="deleteEventModalSm{{ forloop.counter }}" tabindex="-1" role="dialog" aria-labelledby="deleteEventModalSmLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
         <div class="modal-content modal-contact-content text-center">
             <div class="modal-header">
-                <h5 class="modal-title text-danger font-weight-bold" id="deleteEventModalLabel">Remove Item</h5>
+                <h5 class="modal-title text-danger font-weight-bold" id="deleteEventModalSmLabel">Remove Item</h5>
             </div>
             <div class="modal-body">
                 <p class="font-weight-normal">
