Fixed unpredictability of gallery rendering

--- a/album/templates/album/album.html
+++ b/album/templates/album/album.html
@@ -23,15 +23,10 @@
                     "thumbnailBorderHorizontal" : 0,
                     "thumbnailBorderVertical" : 0,
                     "thumbnailAlignments": "scaled",
-                    "gallerySorting": "random",
-                    "galleryDisplayTransition": "slideUp",
-                    "galleryResizeAnimation": true,
-                    "galleryDisplayTransitionDuration": 1000,
-                    "thumbnailDisplayOrder": "random",
                     "thumbnailDisplayTransition": "scaleUp",
-                    "thumbnailDisplayTransitionDuration": 1500,
-                    "thumbnailDisplayInterval": 60,
-                    "thumbnailHoverEffect2": "imageGrayOn",
+                    "thumbnailDisplayTransitionDuration": 1200,
+                    "thumbnailDisplayInterval": 200,
+                    "thumbnailHoverEffect2": "image_scale_1.00_1.10_5000|imageGrayOn",
                     "galleryTheme": {
                         "thumbnail": {
                             "background": "#fff"
