Improved behaviour of gallery by delegating randomisation to the Nanogallery2 plugin

--- a/album/templates/album/album.html
+++ b/album/templates/album/album.html
@@ -17,6 +17,7 @@
             <div id="nanogallery2" data-nanogallery2='{
                     "thumbnailWidth": "400 XS200 SM300",
                     "thumbnailHeight": "auto XSauto SMauto",
+                    "thumbnailDisplayOrder": "random",
                     "thumbnailBaseGridHeight" : 100,
                     "thumbnailGutterWidth" : 2,
                     "thumbnailGutterHeight" : 2,
@@ -24,8 +25,8 @@
                     "thumbnailBorderVertical" : 0,
                     "thumbnailAlignments": "scaled",
                     "thumbnailDisplayTransition": "scaleUp",
-                    "thumbnailDisplayTransitionDuration": 1200,
-                    "thumbnailDisplayInterval": 200,
+                    "thumbnailDisplayTransitionDuration": 800,
+                    "thumbnailDisplayInterval": 80,
                     "thumbnailHoverEffect2": "image_scale_1.00_1.10_5000|imageGrayOn",
                     "galleryTheme": {
                         "thumbnail": {
