--- a/album/templates/album/add_media.html
+++ b/album/templates/album/add_media.html
@@ -6,7 +6,6 @@
 {% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
 <div class="container">
     <div class="row justify-content-center my-5">
         <div class="col-12 col-md-6">
@@ -17,7 +16,9 @@
 
     <div class="row justify-content-center">
         <div class="col-12 col-md-6">
-            <form method="POST" action="{% url 'add_media' %}" class="form mb-2" enctype="multipart/form-data">
+            <!--Add media form: if field is image, don't display as Crispy-->
+            <form method="POST" action="{% url 'add_media' %}" class="form mb-2"
+                enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
                 {% if field.name != 'image' %}
@@ -27,8 +28,10 @@
                 {% endif %}
                 {% endfor %}
                 <div class="text-right">
-                    <a class="btn btn-outline-black rounded-0" href="{% url 'album' %}">Cancel</a>
-                    <button class="btn btn-black rounded-0" type="submit">Add Media</button>
+                    <a class="btn btn-outline-black rounded-0"
+                        href="{% url 'album' %}">Cancel</a>
+                    <button class="btn btn-black rounded-0" type="submit">Add
+                        Media</button>
                 </div>
             </form>
         </div>
@@ -36,11 +39,13 @@
 </div>
 {% endblock %}
 
+<!--Spacer-->
 {% block page_footer %}
-<div class="container footer-container"></div>
+<div class="footer-container"></div>
 {% endblock page_footer %}
 
 {% block postjs %}
 {{ block.super }}
-<script src="{% static 'shop/js/image_script.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'shop/js/image_script.min.js' %}"
+    type="text/javascript"></script>
 {% endblock %}
