--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -3,15 +3,10 @@
 {% load bag_tools %}
 
 {% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+<div class="header-container"></div>
 {% endblock page_header %}
 
 {% block content %}
-<div class="overlay"></div>
 <div class="wrapper">
     <div class="container mb-2 mb-md-5">
         <div class="row mt-5 mb-md-5">
@@ -19,6 +14,7 @@
                 <h2 class="mb-4">Your Shopping Bag</h2>
             </div>
         </div>
+        <!--Renders bag items, else displays message-->
         {% if bag_items %}
         {% include 'includes/bag_contents_md.html' %}
         {% include 'includes/bag_contents_sm.html' %}
@@ -26,7 +22,8 @@
         <div class="row">
             <div class="col">
                 <p class="lead mb-5">Your bag is empty.</p>
-                <a href="{% url 'shop' %}" class="btn btn-outline-black rounded-0 btn-lg mb-5">
+                <a href="{% url 'shop' %}"
+                    class="btn btn-outline-black rounded-0 btn-lg mb-5">
                     <span class="icon">
                         <i class="fas fa-arrow-left"></i>
                     </span>
