--- a/bag/templates/includes/bag-total.html
+++ b/bag/templates/includes/bag-total.html
@@ -1,8 +1,17 @@
-<h6><strong>Bag Total: €{{ total|floatformat:2 }}</strong></h6>
+<!--Bag total-->
+<h6>
+    <strong>Bag Total: €{{ total|floatformat:2 }}</strong>
+</h6>
 <h6>Delivery: €{{ delivery|floatformat:2 }}</h6>
-<h4 class="mt-4"><strong>Grand Total: €{{ grand_total|floatformat:2 }}</strong></h4>
+<h4 class="mt-4">
+    <strong>Grand Total: €{{ grand_total|floatformat:2 }}</strong>
+</h4>
 {% if free_delivery_delta > 0 %}
 <p class="mb-1 text-danger">
-    You could get free delivery by purchasing just <span class="badge badge-pill badge-red"><strong>{{ free_delivery_delta }}</strong></span> more CD(s)!
+    You could get free delivery by purchasing just
+    <span class="badge badge-pill badge-red">
+        <strong>{{ free_delivery_delta }}</strong>
+    </span>
+    more CD(s)!
 </p>
 {% endif %}
