--- a/bag/templates/includes/bag_contents_sm.html
+++ b/bag/templates/includes/bag_contents_sm.html
@@ -1,13 +1,18 @@
 {% load bag_tools %}
+<!--Bag contents sm-->
 <div class="row mx-0">
-    <div class="col-12 py-1 my-3 header-upcoming d-block d-md-none"><strong>Totals</strong></div>
+    <div class="col-12 py-1 my-3 header-upcoming d-block d-md-none">
+        <strong>Totals</strong>
+    </div>
     <div class="col-12 d-block d-md-none text-right">
         {% include 'includes/bag-total.html' %}
     </div>
     <div class="col-12 d-block d-md-none text-right pr-0">
         {% include 'includes/checkout-buttons.html' %}
     </div>
-    <div class="col-12 py-1 my-3 header-upcoming d-block d-md-none"><strong>Order Information</strong></div>
+    <div class="col-12 py-1 my-3 header-upcoming d-block d-md-none">
+        <strong>Order Information</strong>
+    </div>
     {% for item in bag_items %}
     <div class="col-12 d-block d-md-none my-3">
         {% include 'includes/product-image.html' %}
@@ -17,7 +22,9 @@
     </div>
     <div class="col-12 d-block d-md-none text-left">
         <p class="my-0">Price Each: €{{ item.cd.price }}</p>
-        <p><strong>Subtotal: </strong>€{{ item.cd.price | calc_subtotal:item.quantity }}</p>
+        <p><strong>Subtotal:
+            </strong>€{{ item.cd.price | calc_subtotal:item.quantity }}
+        </p>
     </div>
     <div class="col-12 d-block d-md-none text-left">
         {% include 'includes/quantity-form-sm.html' %}
