--- a/bag/templates/includes/checkout-buttons.html
+++ b/bag/templates/includes/checkout-buttons.html
@@ -1,3 +1,4 @@
+<!--Checkout buttons-->
 <a href="{% url 'shop' %}" class="btn btn-outline-black rounded-0 btn-lg">
     <span class="icon">
         <i class="fas fa-arrow-left"></i>
