--- a/bag/templates/includes/product-info.html
+++ b/bag/templates/includes/product-info.html
@@ -1,2 +1,3 @@
+<!--CD info-->
 <p class="my-0"><strong>{{ item.cd.name }}</strong></p>
 <p class="my-0 small text-muted">SKU: {{ item.cd.sku|upper }}</p>
