--- a/bag/templates/includes/quantity-form-sm.html
+++ b/bag/templates/includes/quantity-form-sm.html
@@ -1,17 +1,26 @@
-<form action="{% url 'adjust_bag' item.item_id %}" method="POST" class="form update-form-sm" id="cart-form-sm-{{ forloop.counter }}">
+<!--Quantity input form sm-->
+<form action="{% url 'adjust_bag' item.item_id %}" method="POST"
+    class="form update-form-sm" id="cart-form-sm-{{ forloop.counter }}">
     {% csrf_token %}
     <div class="form-group">
         <div class="input-group">
             <div class="input-group-prepend">
-                <button class="decrement-qty btn btn-black btn-sm rounded-0" data-item_id="{{ item.item_id }}" id="decrement-qty_sm_{{ item.item_id }}">
+                <button class="decrement-qty btn btn-black btn-sm rounded-0"
+                    data-item_id="{{ item.item_id }}"
+                    id="decrement-qty_sm_{{ item.item_id }}">
                     <span>
                         <i class="fas fa-minus fa-sm"></i>
                     </span>
                 </button>
             </div>
-            <input class="form-control form-control-sm qty_input" type="number" name="quantity" value="{{ item.quantity }}" min="1" max="99" data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
+            <input class="form-control form-control-sm qty_input" type="number"
+                name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                data-item_id="{{ item.item_id }}"
+                id="id_qty_{{ item.item_id }}">
             <div class="input-group-append">
-                <button class="increment-qty btn btn-black btn-sm rounded-0" data-item_id="{{ item.item_id }}" id="increment-qty_sm_{{ item.item_id }}">
+                <button class="increment-qty btn btn-black btn-sm rounded-0"
+                    data-item_id="{{ item.item_id }}"
+                    id="increment-qty_sm_{{ item.item_id }}">
                     <span>
                         <i class="fas fa-plus fa-sm"></i>
                     </span>
@@ -19,13 +28,17 @@
             </div>
         </div>
     </div>
+    <!--Error message for validator-->
     <div class="pt-0 error-message text-center d-none">
         <small class="mt-0 text-danger small">Invalid value (1-99)</small>
     </div>
 </form>
-<a class="update-link-sm text-info float-left" data-number="{{ forloop.counter }}">
+<!--Forloop counter passes the right item-->
+<a class="update-link-sm text-info float-left"
+    data-number="{{ forloop.counter }}">
     <i class="fas fa-sync-alt lead text-info"></i>
 </a>
-<a class="float-right" title="Remove" data-toggle="modal" data-target="#deleteBagModal{{ forloop.counter }}">
+<a class="float-right" title="Remove" data-toggle="modal"
+    data-target="#deleteBagModal{{ forloop.counter }}">
     <i class="fas fa-trash lead text-danger"></i>
 </a>
