--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -2,8 +2,9 @@
 {% load static %}
 {% load bag_tools %}
 
+<!--Spacer-->
 {% block page_header %}
-<div class="container header-container"></div>
+<div class="header-container"></div>
 {% endblock page_header %}
 
 {% block content %}
@@ -14,10 +15,12 @@
             <h2>Checkout</h2>
         </div>
     </div>
-
+    <!--Checkout content-->
     <div class="row">
         <div class="col-12 col-lg-6 order-lg-last mb-5">
-            <div class="col-12 py-1 my-3 header-upcoming"><strong>Order Summary ({{ cd_count }} items)</strong></div>
+            <div class="col-12 py-1 my-3 header-upcoming">
+                <strong>Order Summary ({{ cd_count }} items)</strong>
+            </div>
             <div class="row">
                 <div class="col-7 offset-2 text-left">
                     <p class="mb-1 mt-0 small text-muted">Item</p>
@@ -27,25 +30,33 @@
                 </div>
             </div>
             {% for item in bag_items %}
+            <!--Checkout items-->
             <div class="row">
                 <div class="col-2 mb-1">
                     <a href="{% url 'cd_detail' item.cd.id %}">
                         {% if item.cd.image %}
-                        <img src="{{ item.cd.image.url }}" alt="{{ cd.name }}" class="w-100" alt="image">
+                        <img src="{{ item.cd.image.url }}" alt="{{ cd.name }}"
+                            class="w-100" alt="image">
                         {% else %}
-                        <img src="{{ MEDIA_URL }}noimage.png" alt="{{ cd.name }}" class="w-100" alt="noimage">
+                        <img src="{{ MEDIA_URL }}noimage.png"
+                            alt="{{ cd.name }}" class="w-100" alt="noimage">
                         {% endif %}
                     </a>
                 </div>
                 <div class="col-7 text-left">
-                    <p class="my-0 small"><strong>{{ item.cd.name }} (x{{ item.quantity }})</strong></p>
+                    <p class="my-0 small">
+                        <strong>{{ item.cd.name }} (x{{ item.quantity }})</strong>
+                    </p>
                 </div>
                 <div class="col-3 text-right">
-                    <p class="my-0 small text-muted">€{{ item.cd.price | calc_subtotal:item.quantity }}</p>
+                    <p class="my-0 small text-muted">
+                        €{{ item.cd.price | calc_subtotal:item.quantity }}
+                    </p>
                 </div>
             </div>
             {% endfor %}
             <hr class="my-2">
+            <!--Totals information-->
             <div class="row text-black text-right">
                 <div class="col-7 offset-2">
                     <p class="my-0">Order Total:</p>
@@ -55,21 +66,29 @@
                 <div class="col-3">
                     <p class="my-0">€{{ total | floatformat:2 }}</p>
                     <p class="my-0">€{{ delivery | floatformat:2 }}</p>
-                    <p class="my-0"><strong>€{{ grand_total | floatformat:2 }}</strong></p>
+                    <p class="my-0">
+                        <strong>€{{ grand_total | floatformat:2 }}</strong>
+                    </p>
                 </div>
             </div>
         </div>
         <div class="col-12 col-lg-6">
-        <div class="col-12 py-1 my-3 header-upcoming"><strong>Please fill out the form below</strong></div>
+            <div class="col-12 py-1 my-3 header-upcoming">
+                <strong>Please fill out the form below</strong>
+            </div>
             <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                 {% csrf_token %}
                 <fieldset class="rounded px-3 mb-5">
-                    <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
+                    <legend class="fieldset-label small text-black px-2 w-auto">
+                        Details
+                    </legend>
                     {{ order_form.full_name | as_crispy_field }}
                     {{ order_form.email | as_crispy_field }}
                 </fieldset>
                 <fieldset class="rounded px-3 mb-5">
-                    <legend class="fieldset-label small text-black px-2 w-auto">Delivery</legend>
+                    <legend class="fieldset-label small text-black px-2 w-auto">
+                        Delivery
+                    </legend>
                     {{ order_form.phone_number | as_crispy_field }}
                     {{ order_form.street_address1 | as_crispy_field }}
                     {{ order_form.street_address2 | as_crispy_field }}
@@ -78,31 +97,43 @@
                     {{ order_form.country | as_crispy_field }}
                     <div class="form-check form-check-inline float-right mr-0">
                         {% if user.is_authenticated %}
-                        <label for="id-save-info" class="small form-check-label">Save this delivery information to my profile</label>
-                        <input type="checkbox" class="form-check-input ml-2 mr-0" id="id-save-info" name="save-info" checked>
+                        <label for="id-save-info"
+                            class="small form-check-label">Save this delivery
+                            information to my profile
+                        </label>
+                        <input type="checkbox"
+                            class="form-check-input ml-2 mr-0" id="id-save-info"
+                            name="save-info" checked>
                         {% else %}
                         <label for="id-save-info" class="form-check-label">
-                            <a href="{% url 'account_signup' %}" class="text-info">Create an account</a> or
-                            <a href="{% url 'account_login' %}" class="text-info">login</a> to save this information
+                            <a href="{% url 'account_signup' %}"
+                                class="text-info">Create an account</a> or
+                            <a href="{% url 'account_login' %}"
+                                class="text-info">login</a> to save this
+                            information
                         </label>
                         {% endif %}
                     </div>
                 </fieldset>
                 <fieldset class=" px-3">
-                    <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
+                    <legend class="fieldset-label small text-black px-2 w-auto">
+                        Payment
+                    </legend>
                     <div class="mb-3" id="card-element"></div>
-                    <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
-                    <input type="hidden" value="{{ client_secret }}" name="client_secret">
+                    <div class="mb-3 text-danger" id="card-errors" role="alert">
+                    </div>
+                    <input type="hidden" value="{{ client_secret }}"
+                        name="client_secret">
                 </fieldset>
-
-                <div class="submit-button text-center text-md-right mt-5 mb-2 pr-md-3">
-                    <a href="{% url 'view_bag' %}" class="btn btn-outline-black rounded-0">
+                <div
+                    class="submit-button text-center text-md-right mt-5 mb-2 pr-md-3">
+                    <a href="{% url 'view_bag' %}"
+                        class="btn btn-outline-black rounded-0">
                         <span class="icon">
                             <i class="fas fa-arrow-left"></i>
                         </span>
                         <span class="font-weight-bold">Adjust Bag</span>
                     </a>
-
                     <button class="btn btn-black rounded-0" id="submit-button">
                         <span class="font-weight-bold">Complete Order</span>
                         <span class="icon">
@@ -113,7 +144,9 @@
                         <span class="icon">
                             <i class="fas fa-exclamation-circle"></i>
                         </span>
-                        <span>Your card will be charged <strong>€{{ grand_total|floatformat:2 }}</strong></span>
+                        <span>Your card will be charged
+                            <strong>€{{ grand_total|floatformat:2 }}</strong>
+                        </span>
                     </p>
                 </div>
             </form>
@@ -130,11 +163,8 @@
 {% endblock content %}
 
 {% block page_footer %}
-<div class="container footer-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+<!--Spacer-->
+<div class="footer-container"></div>
 {% endblock page_footer %}
 
 {% block postjs %}
