--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -4,36 +4,40 @@
 {% block extra_css %}
 {% endblock extra_css %}
 
+<!--Spacer-->
 {% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+<div class="header-container"></div>
 {% endblock page_header %}
 
 {% block content %}
-<div class="overlay"></div>
 <div class="container">
     <div class="row mt-5">
         <div class="col">
+            <!--If visiting from profile personalizes message-->
             {% if from_profile %}
             <h2 class="mb-4">Order Information</h2>
             {% else %}
             <h2 class="mb-4">Thank You</h2>
             {% endif %}
-            <p class="text-black {% if from_profile %}mb-3{% else %} mb-0{% endif %}">Your order information is below.</p>
+            <p
+                class="text-black {% if from_profile %}mb-3{% else %} mb-0{% endif %}">
+                Your order information is below.
+            </p>
             {% if not from_profile %}
-            <p class="text-black">A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
+            <p class="text-black">A confirmation email will be sent to
+                <strong>{{ order.email }}</strong>.
+            </p>
             {% endif %}
         </div>
     </div>
+    <!--Order information grid-->
     <div class="row justify-content-center">
         <div class="col-12 col-lg-7">
             <div class="order-confirmation-wrapper p-2 border">
                 <div class="row">
                     <div class="col-12 text-left">
-                        <small class="mb-0 text-black font-weight-bold">Order Number: </small>
+                        <small class="mb-0 text-black font-weight-bold">
+                            Order Number: </small>
                     </div>
                     <div class="col-12 text-left">
                         <small class="mb-0">{{ order.order_number }}</small>
@@ -41,7 +45,9 @@
                 </div>
                 <div class="row">
                     <div class="col-12 text-left">
-                        <small class="mb-0 text-black font-weight-bold">Order Date:</small>
+                        <small class="mb-0 text-black font-weight-bold">Order
+                            Date:
+                        </small>
                     </div>
                     <div class="col-12 text-left">
                         <p class="mb-0">{{ order.date }}</p>
@@ -55,7 +61,9 @@
                 {% for item in order.lineitems.all %}
                 <div class="row">
                     <div class="col-12 text-left">
-                        <p class="mb-0 text-black">{{ item.cd.name }} ({{ item.quantity }}), at €{{ item.cd.price }} each</p>
+                        <p class="mb-0 text-black">{{ item.cd.name }}
+                            ({{ item.quantity }}), at €{{ item.cd.price }} each
+                        </p>
                     </div>
                 </div>
                 {% endfor %}
@@ -79,7 +87,11 @@
                     </div>
                     {% endif %}
                     <div class="col-12 text-left">
-                        <p class="mb-0">{% if order.postcode %}{{ order.postcode }}, {% endif %}{{ order.town_or_city }}, {{ order.country }}</p>
+                        <p class="mb-0">
+                            {% if order.postcode %}{{ order.postcode }},
+                            {% endif %}{{ order.town_or_city }},
+                            {{ order.country }}
+                        </p>
                     </div>
                     <div class="col-12 text-left">
                         <p class="mb-0">Phone: {{ order.phone_number }}</p>
@@ -87,7 +99,9 @@
                 </div>
                 <div class="row">
                     <div class="col-12 text-left">
-                        <small class="mb-0 text-black font-weight-bold">Order Total:</small>
+                        <small class="mb-0 text-black font-weight-bold">
+                            Order Total:
+                        </small>
                     </div>
                     <div class="col-12 col-md-8 text-left">
                         <p class="mb-0">€{{ order.order_total }}</p>
@@ -95,7 +109,9 @@
                 </div>
                 <div class="row">
                     <div class="col-12 text-left">
-                        <small class="mb-0 text-black font-weight-bold">Shipping Cost:</small>
+                        <small class="mb-0 text-black font-weight-bold">
+                            Shipping Cost:
+                        </small>
                     </div>
                     <div class="col-12 text-left">
                         <p class="mb-0">€{{ order.delivery_cost }}</p>
@@ -103,10 +119,14 @@
                 </div>
                 <div class="row">
                     <div class="col-12 text-left">
-                        <small class="mb-0 text-black font-weight-bold">Grand Total:</small>
+                        <small class="mb-0 text-black font-weight-bold">
+                            Grand Total:
+                        </small>
                     </div>
                     <div class="col-12 text-left">
-                        <p class="mb-0 font-weight-bold">€{{ order.grand_total }}</p>
+                        <p class="mb-0 font-weight-bold">
+                            €{{ order.grand_total }}
+                        </p>
                     </div>
                 </div>
             </div>
@@ -115,6 +135,7 @@
     </div>
     <div class="row justify-content-center">
         <div class="col-12 col-lg-7 text-right">
+            <!--Redirects to where it came from-->
             {% if from_profile %}
             <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
                 <span class="icon mr-2">
@@ -135,10 +156,7 @@
 </div>
 {% endblock content %}
 
+<!--Spacer-->
 {% block page_footer %}
-<div class="container footer-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+<div class="footer-container"></div>
 {% endblock page_footer %}
