--- a/events/templates/includes/delete_event_modal_sm.html
+++ b/events/templates/includes/delete_event_modal_sm.html
@@ -1,19 +1,34 @@
 <!-- Delete Modal -->
-<div class="modal fade" id="deleteEventModalSm{{ forloop.counter }}" tabindex="-1" role="dialog" aria-labelledby="deleteEventModalSmLabel" aria-hidden="true">
+<div class="modal fade" id="deleteEventModalSm{{ forloop.counter }}"
+    tabindex="-1" role="dialog" aria-labelledby="deleteEventModalSmLabel"
+    aria-hidden="true">
     <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
         <div class="modal-content modal-contact-content text-center">
             <div class="modal-header">
-                <h5 class="modal-title text-danger font-weight-bold" id="deleteEventModalSmLabel">Remove Item</h5>
+                <h5 class="modal-title text-danger font-weight-bold"
+                    id="deleteEventModalSmLabel">
+                    Remove Item
+                </h5>
             </div>
             <div class="modal-body">
                 <p class="font-weight-normal">
                     <i class="fas fa-exclamation-circle text-danger"></i>
-                    Are you sure you want to remove <span class="font-weight-bold">{{ event.name }}</span> from your events?
+                    Are you sure you want to remove
+                    <span class="font-weight-bold">{{ event.date|date:"j M Y" }}
+                    </span>
+                    from your events?
                 </p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-sm rounded-0 btn-outline-black" data-dismiss="modal">Close</button>
-                <a class="btn btn-black btn-sm rounded-0 remove-button remove_{{ event.id }}">Remove</a>
+                <button type="button"
+                    class="btn btn-sm rounded-0 btn-outline-black"
+                    data-dismiss="modal">
+                    Close
+                </button>
+                <a
+                    class="btn btn-black btn-sm rounded-0 remove-button remove_{{ event.id }}">
+                    Remove
+                </a>
             </div>
         </div>
     </div>
